--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <!-- 🚨 Google Analytics (GA4) - Tourmaker 통합 관리 -->
+    <!-- 🚨 Google Analytics (GA4) - Tourmaker 통합 관리 (요청하신 필수 기능 기본 탑재) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLH9GD9SVR"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -14,6 +14,17 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- 🌟 카카오톡/SNS 공유 시 보여질 썸네일 및 정보 설정 (Open Graph) -->
+    <!-- 대표님이 요청하신 썸네일 자동 반영 기능입니다 -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="2025 통리초등학교 글로벌 영어 캠프 제안서">
+    <meta property="og:description" content="안전하고 즐거운 6박 8일의 여정! 세부 CELLA 어학원 맞춤형 프로그램 & 스마트 가이드북">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1518509562904-e7ef99cdcc86?q=80&w=2574&auto=format&fit=crop">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <!-- // SNS 설정 끝 -->
+
     <title>2025 통리초등학교 글로벌 영어 캠프: Smart Guidebook</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -396,10 +407,10 @@
                 <div class="max-w-md mx-auto bg-white p-8 rounded-2xl shadow-lg border-2 border-sky-400">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgHfgIX70O5k6Anuo0UgALIdaG9jSga9auHu3uyz0uEirylGPAJnjN_qQbvEGMUvPqUQf_g9FMNUHRxlDcUBf4vZ3Mpy4TnA9WxbmzWYK11gt2zuy_Irl4wctNFjcjLyPo0GPXV792o_J7L9guRMuDfeC1gy7USwywjYbECZgzcsHybuGRRAXAnO1eNmP8/s320/logo.png" alt="Tourmaker Logo" class="h-8 mx-auto mb-4">
                     <h3 class="text-xl font-bold text-slate-800 mb-2">어학연수 전담팀</h3>
-                    <p class="text-slate-600 mb-4">최적의 일정과 견적으로 보답하겠습니다.</p>
+                    <p class="text-slate-600 mb-4">최적의 일정과 퀄리티로 보답하겠습니다.</p>
                     <div class="space-y-2">
                         <p class="font-medium text-slate-700">총괄: 조혁 이사 <a href="tel:01042494026" class="text-blue-600 ml-2">010-4249-4026</a></p>
-                        <p class="font-medium text-slate-700">실무: 이재명 팀장 <a href="tel:01094437881" class="text-blue-600 ml-2">010-9443-7881</a></p>
+                        <p class="font-medium text-slate-700">실무: 이재명 대표 <a href="tel:01094437881" class="text-blue-600 ml-2">010-9443-7881</a></p>
                     </div>
                 </div>
             </div>
@@ -410,11 +421,14 @@
     <footer class="bg-slate-900 text-slate-400 py-12 border-t border-slate-800">
         <div class="container mx-auto px-4 text-center">
             <div class="mb-6 flex justify-center">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgHfgIX70O5k6Anuo0UgALIdaG9jSga9auHu3uyz0uEirylGPAJnjN_qQbvEGMUvPqUQf_g9FMNUHRxlDcUBf4vZ3Mpy4TnA9WxbmzWYK11gt2zuy_Irl4wctNFjcjLyPo0GPXV792o_J7L9guRMuDfeC1gy7USwywjYbECZgzcsHybuGRRAXAnO1eNmP8/s320/logo.png" alt="Tourmaker Footer Logo" class="h-10 w-auto opacity-80 hover:opacity-100 transition-opacity bg-white/10 rounded px-2 py-1">
+                <a href="https://tourmaker.kr" target="_blank">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgHfgIX70O5k6Anuo0UgALIdaG9jSga9auHu3uyz0uEirylGPAJnjN_qQbvEGMUvPqUQf_g9FMNUHRxlDcUBf4vZ3Mpy4TnA9WxbmzWYK11gt2zuy_Irl4wctNFjcjLyPo0GPXV792o_J7L9guRMuDfeC1gy7USwywjYbECZgzcsHybuGRRAXAnO1eNmP8/s320/logo.png" alt="Tourmaker Footer Logo" class="h-10 w-auto opacity-80 hover:opacity-100 transition-opacity bg-white/10 rounded px-2 py-1">
+                </a>
             </div>
             
             <p class="mb-2 font-medium text-slate-300">통리초등학교 학생들의 꿈을 응원합니다.</p>
-            <p class="text-sm text-slate-600">&copy; 2025 Tourmaker. All Rights Reserved.</p>
+            <p class="text-sm text-slate-600 mb-4">&copy; 2025 Tourmaker. All Rights Reserved.</p>
+            <a href="https://tourmaker.kr" target="_blank" class="text-xs text-sky-400 hover:text-sky-300 underline">Tourmaker 공식 홈페이지 방문하기 (tourmaker.kr)</a>
         </div>
     </footer>
 
