--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
                 <div class="max-w-md mx-auto bg-white p-8 rounded-2xl shadow-lg border-2 border-sky-400">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgHfgIX70O5k6Anuo0UgALIdaG9jSga9auHu3uyz0uEirylGPAJnjN_qQbvEGMUvPqUQf_g9FMNUHRxlDcUBf4vZ3Mpy4TnA9WxbmzWYK11gt2zuy_Irl4wctNFjcjLyPo0GPXV792o_J7L9guRMuDfeC1gy7USwywjYbECZgzcsHybuGRRAXAnO1eNmP8/s320/logo.png" alt="Tourmaker Logo" class="h-8 mx-auto mb-4">
                     <h3 class="text-xl font-bold text-slate-800 mb-2">어학연수 전담팀</h3>
-                    <p class="text-slate-600 mb-4">최적의 일정과 퀄리티로 보답하겠습니다.</p>
+                    <p class="text-slate-600 mb-4">최적의 일정과 프로그램 퀄리티로 보답하겠습니다.</p>
                     <div class="space-y-2">
-                        <p class="font-medium text-slate-700">총괄: 조혁 이사 <a href="tel:01042494026" class="text-blue-600 ml-2">010-4249-4026</a></p>
-                        <p class="font-medium text-slate-700">실무: 이재명 대표 <a href="tel:01094437881" class="text-blue-600 ml-2">010-9443-7881</a></p>
+                        <p class="font-medium text-slate-700">총괄: 이재명 대표 <a href="tel:01094437881" class="text-blue-600 ml-2">010-9443-7881</a></p>
+                        <p class="font-medium text-slate-700">실무: 조혁 이사 <a href="tel:01042494026" class="text-blue-600 ml-2">010-4249-4026</a></p>
                     </div>
                 </div>
             </div>
@@ -418,7 +418,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-slate-900 text-slate-400 py-12 border-t border-slate-800">
+    <footer class="bg-slate-50 text-slate-600 py-12 border-t border-slate-200">
         <div class="container mx-auto px-4 text-center">
             <div class="mb-6 flex justify-center">
                 <a href="https://tourmaker.kr" target="_blank">
@@ -426,9 +426,9 @@
                 </a>
             </div>
             
-            <p class="mb-2 font-medium text-slate-300">통리초등학교 학생들의 꿈을 응원합니다.</p>
-            <p class="text-sm text-slate-600 mb-4">&copy; 2025 Tourmaker. All Rights Reserved.</p>
-            <a href="https://tourmaker.kr" target="_blank" class="text-xs text-sky-400 hover:text-sky-300 underline">Tourmaker 공식 홈페이지 방문하기 (tourmaker.kr)</a>
+            <p class="mb-2 font-medium text-slate-500">통리초등학교 학생들의 꿈을 응원합니다.</p>
+            <p class="text-sm text-slate-400 mb-4">&copy; 2025 Tourmaker. All Rights Reserved.</p>
+            <a href="https://tourmaker.kr" target="_blank" class="text-xs text-sky-500 hover:text-sky-700 underline font-bold">투어메이커 홈페이지 방문하기 (tourmaker.kr)</a>
         </div>
     </footer>
 
