--- a/index.html
+++ b/index.html
@@ -141,11 +141,18 @@
     <main>
         <!-- Hero Section -->
         <section id="home" class="hero-bg-cebu text-white text-center flex items-center justify-center min-h-[85vh] relative">
-            <div class="container mx-auto px-4 z-10">
+            <div class="container mx-auto px-4 z-10 flex flex-col items-center">
+                <!-- Tongri Elementary School Logo (Added as requested) -->
+                <div class="bg-white/90 p-3 rounded-full shadow-lg mb-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEh08bHS4da9YBugh4FX9Li0Of7ihbcIKFVY6MfTJvvBMpy8jKmLFFvoTgnldS2rlPNNdbxMag7QxAgkm6IPXzQqca8P2dwI73U-WUCVZ5HkiLpDcDtdz3GPLocOp2iXnM-O9edeL8Tt3b8GXGzUEuamRu_V5zcD8Op2rF1LqL8CaCV47QLLiYXcIeL-ac4" 
+                         alt="통리초등학교 로고" 
+                         class="h-20 w-auto object-contain">
+                </div>
+
                 <div class="inline-block bg-sky-600/90 text-white px-4 py-1 rounded-full text-sm font-bold mb-4 animate-bounce">
                     ✨ 학습 + 문화체험 + 액티비티 = 완벽한 밸런스
                 </div>
-                <p class="text-xl font-semibold text-yellow-300 mb-2">태백 통리초등학교 학생들을 위한</p>
+                <p class="text-xl font-semibold text-yellow-300 mb-2">통리초등학교 학생들을 위한 맞춤 제안</p>
                 <h1 class="text-4xl md:text-6xl font-black mb-6 leading-tight drop-shadow-lg">
                     안전하고 즐거운<br>글로벌 영어 캠프
                 </h1>
@@ -417,7 +424,7 @@
         </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer (Updated as requested) -->
     <footer class="bg-slate-50 text-slate-600 py-12 border-t border-slate-200">
         <div class="container mx-auto px-4 text-center">
             <div class="mb-6 flex justify-center">
@@ -427,8 +434,12 @@
             </div>
             
             <p class="mb-2 font-medium text-slate-500">통리초등학교 학생들의 꿈을 응원합니다.</p>
-            <p class="text-sm text-slate-400 mb-4">&copy; 2025 Tourmaker. All Rights Reserved.</p>
-            <a href="https://tourmaker.kr" target="_blank" class="text-xs text-sky-500 hover:text-sky-700 underline font-bold">투어메이커 홈페이지 방문하기 (tourmaker.kr)</a>
+            <p class="text-sm text-slate-400 mb-6">&copy; 2025 Tourmaker. All Rights Reserved.</p>
+            
+            <!-- Updated Button Style Link -->
+            <a href="https://tourmaker.kr" target="_blank" class="inline-block border-2 border-sky-500 text-sky-600 hover:bg-sky-500 hover:text-white font-bold py-2 px-6 rounded transition-colors duration-300">
+                투어메이커 홈페이지 방문하기
+            </a>
         </div>
     </footer>
 
