--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="2025 통리초등학교 글로벌 영어 캠프 제안서">
     <meta property="og:description" content="안전하고 즐거운 6박 8일의 여정! 세부 CELLA 어학원 맞춤형 프로그램 & 스마트 가이드북">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1518509562904-e7ef99cdcc86?q=80&w=2574&auto=format&fit=crop">
+    <meta property="og:image" content="https://media.gettyimages.com/id/2255375776/photo/cebu-city-port-bridge-over-waterfront-skyline.jpg?s=612x612&w=0&k=20&c=4zUT7MTG4dDmOSJ7rmKLWwWThH2Oo0VyIRWCIWpUIjM=">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <!-- // SNS 설정 끝 -->
@@ -34,9 +34,10 @@
     <style>
         body { font-family: 'Noto Sans KR', sans-serif; background-color: #f8fafc; color: #1e293b; }
         
-        /* Hero Background - Cebu Aesthetic */
+        /* Hero Background - Updated Image */
         .hero-bg-cebu { 
-            background: linear-gradient(rgba(15, 23, 42, 0.5), rgba(30, 58, 138, 0.7)), url('https://images.unsplash.com/photo-1518509562904-e7ef99cdcc86?q=80&w=2574&auto=format&fit=crop');
+            /* 배경 이미지 교체 및 텍스트 가독성을 위한 그라디언트 조정 */
+            background: linear-gradient(rgba(15, 23, 42, 0.4), rgba(30, 58, 138, 0.6)), url('https://media.gettyimages.com/id/2255375776/photo/cebu-city-port-bridge-over-waterfront-skyline.jpg?s=612x612&w=0&k=20&c=4zUT7MTG4dDmOSJ7rmKLWwWThH2Oo0VyIRWCIWpUIjM=');
             background-size: cover;
             background-position: center;
         } 
@@ -142,11 +143,12 @@
         <!-- Hero Section -->
         <section id="home" class="hero-bg-cebu text-white text-center flex items-center justify-center min-h-[85vh] relative">
             <div class="container mx-auto px-4 z-10 flex flex-col items-center">
-                <!-- Tongri Elementary School Logo (Added as requested) -->
-                <div class="bg-white/90 p-3 rounded-full shadow-lg mb-6 transform hover:scale-105 transition-transform duration-300">
+                <!-- Tongri Elementary School Logo -->
+                <!-- 로고 배경을 흰색 박스(bg-white)로 변경하고 크기를 작게 조정 -->
+                <div class="bg-white p-3 rounded-xl shadow-xl mb-8 transform hover:scale-105 transition-transform duration-300 border border-slate-100">
                     <img src="https://blogger.googleusercontent.com/img/a/AVvXsEh08bHS4da9YBugh4FX9Li0Of7ihbcIKFVY6MfTJvvBMpy8jKmLFFvoTgnldS2rlPNNdbxMag7QxAgkm6IPXzQqca8P2dwI73U-WUCVZ5HkiLpDcDtdz3GPLocOp2iXnM-O9edeL8Tt3b8GXGzUEuamRu_V5zcD8Op2rF1LqL8CaCV47QLLiYXcIeL-ac4" 
                          alt="통리초등학교 로고" 
-                         class="h-20 w-auto object-contain">
+                         class="h-16 w-auto object-contain">
                 </div>
 
                 <div class="inline-block bg-sky-600/90 text-white px-4 py-1 rounded-full text-sm font-bold mb-4 animate-bounce">
@@ -424,7 +426,7 @@
         </section>
     </main>
 
-    <!-- Footer (Updated as requested) -->
+    <!-- Footer -->
     <footer class="bg-slate-50 text-slate-600 py-12 border-t border-slate-200">
         <div class="container mx-auto px-4 text-center">
             <div class="mb-6 flex justify-center">
@@ -437,7 +439,7 @@
             <p class="text-sm text-slate-400 mb-6">&copy; 2025 Tourmaker. All Rights Reserved.</p>
             
             <!-- Updated Button Style Link -->
-            <a href="https://tourmaker.kr" target="_blank" class="inline-block border-2 border-sky-500 text-sky-600 hover:bg-sky-500 hover:text-white font-bold py-2 px-6 rounded transition-colors duration-300">
+            <a href="https://tourmaker.kr" target="_blank" class="inline-block bg-sky-600 hover:bg-sky-700 text-white font-bold py-3 px-8 rounded-lg shadow-md transition-colors duration-300">
                 투어메이커 홈페이지 방문하기
             </a>
         </div>
